<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_delete_forever_black_24dp"
        android:title="@string/delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_select_date"
        android:icon="@drawable/ic_date_range_black_24dp"
        android:title="@string/select_date"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_select_time"
        android:icon="@drawable/ic_access_time_black_24dp"
        android:title="@string/select_time"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_save"
        android:icon="@drawable/ic_done_black_24dp"
        android:title="@string/save"
        app:showAsAction="always" />
</menu>