...
    <string name="pref_light_theme_value">light</string>
    <string name="prf_default_heme_value">default</string>

    <string name="default_theme">Default</string>
    <string name="light_theme">Light</string>
    <string name="dark_theme">Dark</string>
    <string name="app_them_title">App theme</string>
    <string name="profile_image_description">Profiel image</string>
    <string name="profile_name">Ahmad Jawid</string>
    <string name="app_icon">App icon</string>
    <string name="login">Login</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_password">Enter password</string>
...
